[package]
name = "sunwalker_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
libc = "0.2.120"
anyhow = "1.0"
nix = "0.23.1"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
sys-mount = "1.5.1"
crossbeam = "0.8.1"

[profile.release]
debug = true
