[package]
name = "sunwalker_invoker"
version = "0.1.0"
edition = "2021"
authors = ["Ivanq <imachug@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Invoker for sunwalker judge system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
libc = "0.2.120"
anyhow = "1.0"
nix = "0.23.1"
sys-mount = "1.5.1"
lisp = { path = "lisp" }
tokio-tungstenite = { version = "0.17.1", features = ["rustls"] }
clap = { version = "3.1.6", features = ["derive"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive", "rc"] }
parse-size = "1.0.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
rmp-serde = "1.0.0"
tokio-fork = "0.2.1"
ouroboros = "0.15.0"
futures = "0.3.21"
multiprocessing = { path = "multiprocessing" }
rtnetlink = "0.9.1"
itertools = "0.10.3"
tokio-stream = "0.1.9"
async-stream = "0.3.3"

[profile.release]
strip = true
lto = true
